# cli-boilerplate

./: .gitignore  README.md  pyproject.toml
changeme/: cli.py
